<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_fragment"
        android:text="@string/set_theme"
        android:textSize="@dimen/text_size_fragment" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_fragment"
        android:layout_marginEnd="@dimen/margin_fragment"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MyThemeDefault"
            android:textSize="@dimen/text_size_fragment" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_blueberry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MyThemeBlueberry"
            android:textSize="@dimen/text_size_fragment" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_pear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MyThemePear"
            android:textSize="@dimen/text_size_fragment" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back_to_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/back" />

</LinearLayout>